--- a/pom.xml
+++ b/pom.xml
@@ -4,20 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.algorithm</groupId>
+    <groupId>com.algorithms</groupId>
     <artifactId>algorithms</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>chapter1</module>
     </modules>
-
-<!--    <dependencies>-->
-<!--    <dependency>-->
-<!--        <groupId>com.algs4 </groupId>-->
-<!--        <artifactId>Algorithms</artifactId>-->
-<!--        <version>1.0</version>-->
-<!--    </dependency>-->
-<!--</dependencies>-->
 
 </project>
